@@ -28,7 +28,7 @@
   e2f730e78dc27254776b672fc007a4bef3dd0f56 2010090601 mingw32-autotools.xml
   9de97172522316bb359227b484cfc9bc4c5b6c5a 2011060500 mingw32-base.xml
   fa31e0d9c348863330a84cb6b976d493b7734209 2011101100 mingw32-basic-bsdtar.xml
-  b7931fcdbfc7cb63c21ff97c1ebe195de6bbb2b7 2011101100 mingw32-binutils.xml
+  2e422f7ef9f923561a038da518a872532900e13a 2011120300 mingw32-binutils.xml
   2d70daa65cfe81eb71ac6817358b1cb284d6a68f 2011101400 mingw32-bzip2.xml
   9a70ba2be6c8a8e39d0d58b458592dfba348230f 2011101100 mingw32-cygutils.xml
   dac44763209525b04cbaab271524991a9db920d0 2011101100 mingw32-expat.xml
