@@ -19,9 +19,12 @@
       </description>
 
       <source tarname="binutils-%-mingw32-src.tar.%" />
-      <licence tarname="binutils-%-mingw32-doc.tar.%" />
+      <licence tarname="binutils-%-mingw32-lic.tar.%" />
 
       <component class="bin">
+        <release tarname="binutils-2.22-1-mingw32-bin.tar.lzma" >
+          <requires eq="mingw32-libintl-*-mingw32-*-dll-8.tar" />
+        </release>
         <release tarname="binutils-2.21.53-1-mingw32-bin.tar.lzma" >
           <requires eq="mingw32-libintl-*-mingw32-*-dll-8.tar" />
         </release>
@@ -40,6 +43,7 @@
       </component>
 
       <component class="doc">
+        <release tarname="binutils-2.22-1-mingw32-doc.tar.lzma" />
         <release tarname="binutils-2.21.53-1-mingw32-doc.tar.lzma" />
         <release tarname="binutils-2.21.1-2-mingw32-doc.tar.lzma" />
         <release tarname="binutils-2.21.1-1-mingw32-doc.tar.lzma" />
@@ -48,6 +52,7 @@
       </component>
 
       <component class="lang">
+        <release tarname="binutils-2.22-1-mingw32-lang.tar.lzma" />
         <release tarname="binutils-2.21.53-1-mingw32-lang.tar.lzma" />
         <release tarname="binutils-2.21.1-2-mingw32-lang.tar.lzma" />
         <release tarname="binutils-2.21.1-1-mingw32-lang.tar.lzma" />
